# Atlas

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .thumbnail  CLAUDE.md  Makefile  index.html  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: CLAUDE.md  settings.json  settings.local.json
.claude/skills/agent-designer/: README.md  SKILL.md  agent_evaluator.py  agent_planner.py  tool_schema_generator.py
.claude/skills/agent-workflow-designer/: SKILL.md
.claude/skills/api-design-reviewer/: SKILL.md
.claude/skills/ci-cd-pipeline-builder/: SKILL.md
.claude/skills/database-schema-designer/: SKILL.md
.claude/skills/incident-commander/: README.md  SKILL.md
.claude/skills/mcp-server-builder/: SKILL.md
.claude/skills/migration-architect/: README.md  SKILL.md
.claude/skills/observability-designer/: README.md  SKILL.md
.claude/skills/performance-profiler/: SKILL.md
.claude/skills/rag-architect/: chunking_optimizer.py  rag_pipeline_designer.py  retrieval_evaluator.py
.claude/skills/release-manager/: README.md  SKILL.md  changelog_generator.py  release_planner.py  version_bumper.py
.github/workflows/: ci.yml  eval-nightly.yml  eval-smoke.yml  security.yml
apps/api/: Dockerfile  deps.py  main.py  pyproject.toml
apps/api/orchestrator/: conversation.py  cost.py  pipeline.py  state.py
apps/api/orchestrator/handlers/: compress.py  fuse.py  generate.py  rerank.py  retrieve.py  rewrite.py  verify.py
apps/api/routers/: documents.py  evals.py  query.py
apps/eval-runner/: pyproject.toml
apps/eval-runner/eval_runner/: cli.py  compare.py  config.py  dataset.py  faithfulness.py  metrics.py  persist.py  report.py  runner.py  stats.py
apps/ingestion-worker/: Dockerfile  embedders.py  pyproject.toml  worker.py
apps/ingestion-worker/tasks/: ingest.py  run_eval.py
apps/mcp-server/: pyproject.toml
apps/web/: Dockerfile  package.json  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
docs/: MODULES.md  adrs.md  api reference.md  datamodel.md  prd.md  runbook.md  trd.md
evals/configs/: _base.yaml  baseline.yaml  bm25_only.yaml  dense_bge.yaml  hybrid_bge.yaml  hybrid_bge_compress1k.yaml  hybrid_bge_k20.yaml  hybrid_cohere.yaml  hybrid_noop.yaml
evals/datasets/: README.md  schema.json  smoke_50.jsonl
infra/: docker-compose.override.yml  docker-compose.yml
infra/helm/atlas/: Chart.yaml  values.yaml
infra/migrations/: alembic.ini  env.py
infra/migrations/versions/: 0001_baseline_schema.py  0002_eval_question_results.py
src/: App.jsx  AppShell.jsx  api.js  primitives.jsx
src/pages/: ApiKeysMcpHelp.jsx  Auth.jsx  Chat.jsx  Dashboard.jsx  DocumentDetail.jsx  Documents.jsx  EvalCompare.jsx  EvalRunDetail.jsx  Marketing.jsx  Operations.jsx  Pricing.jsx  Settings1.jsx  Settings2.jsx  TraceDrawer.jsx  UploadModal.jsx
styles/: app.css  marketing.css  tokens.css
tests/: conftest.py  test_atlas_core.py  test_chunk.py  test_compress.py  test_db.py  test_docker_compose.py  test_embed.py  test_env.py  test_eval_metrics.py  test_eval_runner.py  test_evals_api.py  test_health.py  test_indexes.py  test_ingestion.py  test_parse.py  test_query_orchestrator.py  test_rerankers.py  test_retrieval_bm25.py  test_retrieval_dense.py  test_retrieval_hybrid.py  test_rls.py  test_upload_api.py
(+53 files in other folders)
