[project]
name = "atlas-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "openai>=1.0",
  "redis[asyncio]>=5.0",
  "arq>=0.25",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "structlog>=24.0",
  "prometheus-client>=0.20",
  "langgraph>=0.2",
  "langgraph-checkpoint-postgres>=2.0",
  "psycopg[async]>=3.1",
  "atlas-core",
  "atlas-schemas",
]

[tool.uv.sources]
atlas-core = { workspace = true }
atlas-schemas = { workspace = true }
