[project]
name = "atlas-eval-runner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1",
  "ragas>=0.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "datasets>=2.18",
  "jinja2>=3.1",
  "atlas-core",
]

[project.scripts]
atlas-eval = "eval_runner.cli:main"

[tool.uv.sources]
atlas-core = { workspace = true }
