[project]
name = "atlas-eval-runner"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "click>=8.1",
  "numpy>=1.26",
  "pyyaml>=6.0",
  "pydantic>=2.6",
  "openai>=1.0",
  "atlas-core",
]

[project.scripts]
atlas-eval = "eval_runner.cli:main"

[tool.uv.sources]
atlas-core = { workspace = true }
