[project]
name = "atlas-ingestion-worker"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "arq>=0.25",
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "trafilatura>=1.9",
  "markdown-it-py>=3.0",
  "sentence-transformers>=3.0",
  "FlagEmbedding>=1.2",
  "boto3>=1.34",
  "redis[asyncio]>=5.0",
  "atlas-core",
]

[tool.uv.sources]
atlas-core = { workspace = true }
